// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DictRendererComponent should render dict renderer 1`] = `
<div
  id="root0"
  ng-version="5.2.4"
>
  Term 1
</div>
`;

exports[`DictRendererComponent should render dict renderer using callback 1`] = `
<div
  id="root1"
  ng-version="5.2.4"
>
  Term 1
</div>
`;
